chore(wazuh): remove anything wazuh related

--- a/cluster/apps/wazuh-system/indexer/configmap.yaml
+++ b/cluster/apps/wazuh-system/indexer/configmap.yaml
@@ -1,100 +1,100 @@
-kind: ConfigMap
-apiVersion: v1
-metadata:
-  name: wazuh-indexer-configmap
-  namespace: wazuh-system
-  annotations:
-    kustomize.toolkit.fluxcd.io/substitute: disabled
-data:
-  opensearch.yml: |-
-    cluster.name: ${CLUSTER_NAME}
-    node.name: ${NODE_NAME}
-    network.host: ${NETWORK_HOST}
-    discovery.type: single-node
-    # discovery.seed_hosts: wazuh-indexer-0.wazuh-indexer-discovery-svc
-    # cluster.initial_master_nodes:
-    #  - wazuh-indexer-0
-    
-    # node.max_local_storage_nodes: "1"
-    path.data: /var/lib/wazuh-indexer
-    path.logs: /var/log/wazuh-indexer
-    plugins.security.ssl.http.pemcert_filepath: /usr/share/wazuh-indexer/certs/node/tls.crt
-    plugins.security.ssl.http.pemkey_filepath: /usr/share/wazuh-indexer/certs/node/tls.key
-    plugins.security.ssl.http.pemtrustedcas_filepath: /usr/share/wazuh-indexer/certs/node/ca.crt
-    plugins.security.ssl.transport.pemcert_filepath: /usr/share/wazuh-indexer/certs/admin/tls.crt
-    plugins.security.ssl.transport.pemkey_filepath: /usr/share/wazuh-indexer/certs/admin/tls.key
-    plugins.security.ssl.transport.pemtrustedcas_filepath: /usr/share/wazuh-indexer/certs/admin/ca.crt
-    plugins.security.ssl.http.enabled: true
-    plugins.security.ssl.transport.enforce_hostname_verification: false
-    plugins.security.ssl.transport.resolve_hostname: false
-    plugins.security.authcz.admin_dn:
-      - CN=admin,O=Company,L=California,C=US
-    plugins.security.check_snapshot_restore_write_privileges: true
-    plugins.security.enable_snapshot_restore_privilege: true
-    plugins.security.nodes_dn:
-      - CN=indexer,O=Company,L=California,C=US
-    plugins.security.restapi.roles_enabled:
-    - "all_access"
-    - "security_rest_api_access"
-    plugins.security.system_indices.enabled: true
-    plugins.security.system_indices.indices: [".opendistro-alerting-config", ".opendistro-alerting-alert*", ".opendistro-anomaly-results*", ".opendistro-anomaly-detector*", ".opendistro-anomaly-checkpoints", ".opendistro-anomaly-detection-state", ".opendistro-reports-*", ".opendistro-notifications-*", ".opendistro-notebooks", ".opensearch-observability", ".opendistro-asynchronous-search-response*", ".replication-metadata-store"]
-    plugins.security.allow_default_init_securityindex: true
-    cluster.routing.allocation.disk.threshold_enabled: false
-    compatibility.override_main_response_version: true
-  internal_users.yml: |-
-    # This is the internal user database
-    # The hash value is a bcrypt hash and can be generated with plugin/tools/hash.sh
-    
-    _meta:
-      type: "internalusers"
-      config_version: 2
-    
-    # Define your internal users here
-    
-    ## Demo users
-    
-    admin:
-      hash: "$2y$12$K/SpwjtB.wOHJ/Nc6GVRDuc1h0rM1DfvziFRNPtk27P.c4yDr9njO"
-      reserved: true
-      backend_roles:
-      - "admin"
-      description: "Demo admin user"
-    
-    kibanaserver:
-      hash: "$2a$12$4AcgAt3xwOWadA5s5blL6ev39OXDNhmOesEoo33eZtrq2N0YrU3H."
-      reserved: true
-      description: "Demo kibanaserver user"
-    
-    kibanaro:
-      hash: "$2a$12$JJSXNfTowz7Uu5ttXfeYpeYE0arACvcwlPBStB1F.MI7f0U9Z4DGC"
-      reserved: false
-      backend_roles:
-      - "kibanauser"
-      - "readall"
-      attributes:
-        attribute1: "value1"
-        attribute2: "value2"
-        attribute3: "value3"
-      description: "Demo kibanaro user"
-    
-    logstash:
-      hash: "$2a$12$u1ShR4l4uBS3Uv59Pa2y5.1uQuZBrZtmNfqB3iM/.jL0XoV9sghS2"
-      reserved: false
-      backend_roles:
-      - "logstash"
-      description: "Demo logstash user"
-    
-    readall:
-      hash: "$2a$12$ae4ycwzwvLtZxwZ82RmiEunBbIPiAmGZduBAjKN0TXdwQFtCwARz2"
-      reserved: false
-      backend_roles:
-      - "readall"
-      description: "Demo readall user"
-    
-    snapshotrestore:
-      hash: "$2y$12$DpwmetHKwgYnorbgdvORCenv4NAK8cPUg8AI6pxLCuWf/ALc0.v7W"
-      reserved: false
-      backend_roles:
-      - "snapshotrestore"
-      description: "Demo snapshotrestore user"
-
+#kind: ConfigMap
+#apiVersion: v1
+#metadata:
+#  name: wazuh-indexer-configmap
+#  namespace: wazuh-system
+#  annotations:
+#    kustomize.toolkit.fluxcd.io/substitute: disabled
+#data:
+#  opensearch.yml: |-
+#    cluster.name: ${CLUSTER_NAME}
+#    node.name: ${NODE_NAME}
+#    network.host: ${NETWORK_HOST}
+#    discovery.type: single-node
+#    # discovery.seed_hosts: wazuh-indexer-0.wazuh-indexer-discovery-svc
+#    # cluster.initial_master_nodes:
+#    #  - wazuh-indexer-0
+#
+#    # node.max_local_storage_nodes: "1"
+#    path.data: /var/lib/wazuh-indexer
+#    path.logs: /var/log/wazuh-indexer
+#    plugins.security.ssl.http.pemcert_filepath: /usr/share/wazuh-indexer/certs/node/tls.crt
+#    plugins.security.ssl.http.pemkey_filepath: /usr/share/wazuh-indexer/certs/node/tls.key
+#    plugins.security.ssl.http.pemtrustedcas_filepath: /usr/share/wazuh-indexer/certs/node/ca.crt
+#    plugins.security.ssl.transport.pemcert_filepath: /usr/share/wazuh-indexer/certs/admin/tls.crt
+#    plugins.security.ssl.transport.pemkey_filepath: /usr/share/wazuh-indexer/certs/admin/tls.key
+#    plugins.security.ssl.transport.pemtrustedcas_filepath: /usr/share/wazuh-indexer/certs/admin/ca.crt
+#    plugins.security.ssl.http.enabled: true
+#    plugins.security.ssl.transport.enforce_hostname_verification: false
+#    plugins.security.ssl.transport.resolve_hostname: false
+#    plugins.security.authcz.admin_dn:
+#      - CN=admin,O=Company,L=California,C=US
+#    plugins.security.check_snapshot_restore_write_privileges: true
+#    plugins.security.enable_snapshot_restore_privilege: true
+#    plugins.security.nodes_dn:
+#      - CN=indexer,O=Company,L=California,C=US
+#    plugins.security.restapi.roles_enabled:
+#    - "all_access"
+#    - "security_rest_api_access"
+#    plugins.security.system_indices.enabled: true
+#    plugins.security.system_indices.indices: [".opendistro-alerting-config", ".opendistro-alerting-alert*", ".opendistro-anomaly-results*", ".opendistro-anomaly-detector*", ".opendistro-anomaly-checkpoints", ".opendistro-anomaly-detection-state", ".opendistro-reports-*", ".opendistro-notifications-*", ".opendistro-notebooks", ".opensearch-observability", ".opendistro-asynchronous-search-response*", ".replication-metadata-store"]
+#    plugins.security.allow_default_init_securityindex: true
+#    cluster.routing.allocation.disk.threshold_enabled: false
+#    compatibility.override_main_response_version: true
+#  internal_users.yml: |-
+#    # This is the internal user database
+#    # The hash value is a bcrypt hash and can be generated with plugin/tools/hash.sh
+#
+#    _meta:
+#      type: "internalusers"
+#      config_version: 2
+#
+#    # Define your internal users here
+#
+#    ## Demo users
+#
+#    admin:
+#      hash: "$2y$12$K/SpwjtB.wOHJ/Nc6GVRDuc1h0rM1DfvziFRNPtk27P.c4yDr9njO"
+#      reserved: true
+#      backend_roles:
+#      - "admin"
+#      description: "Demo admin user"
+#
+#    kibanaserver:
+#      hash: "$2a$12$4AcgAt3xwOWadA5s5blL6ev39OXDNhmOesEoo33eZtrq2N0YrU3H."
+#      reserved: true
+#      description: "Demo kibanaserver user"
+#
+#    kibanaro:
+#      hash: "$2a$12$JJSXNfTowz7Uu5ttXfeYpeYE0arACvcwlPBStB1F.MI7f0U9Z4DGC"
+#      reserved: false
+#      backend_roles:
+#      - "kibanauser"
+#      - "readall"
+#      attributes:
+#        attribute1: "value1"
+#        attribute2: "value2"
+#        attribute3: "value3"
+#      description: "Demo kibanaro user"
+#
+#    logstash:
+#      hash: "$2a$12$u1ShR4l4uBS3Uv59Pa2y5.1uQuZBrZtmNfqB3iM/.jL0XoV9sghS2"
+#      reserved: false
+#      backend_roles:
+#      - "logstash"
+#      description: "Demo logstash user"
+#
+#    readall:
+#      hash: "$2a$12$ae4ycwzwvLtZxwZ82RmiEunBbIPiAmGZduBAjKN0TXdwQFtCwARz2"
+#      reserved: false
+#      backend_roles:
+#      - "readall"
+#      description: "Demo readall user"
+#
+#    snapshotrestore:
+#      hash: "$2y$12$DpwmetHKwgYnorbgdvORCenv4NAK8cPUg8AI6pxLCuWf/ALc0.v7W"
+#      reserved: false
+#      backend_roles:
+#      - "snapshotrestore"
+#      description: "Demo snapshotrestore user"
+#
