--- a/cluster/apps/wazuh-system/manager/api-secrets.enc.yaml
+++ b/cluster/apps/wazuh-system/manager/api-secrets.enc.yaml
@@ -1,38 +1,38 @@
-apiVersion: v1
-kind: Secret
-type: Opaque
-metadata:
-    name: wazuh-api-secrets
-    namespace: wazuh-system
-stringData:
-    username: ENC[AES256_GCM,data:nU4HoHK3c7n+,iv:UApcAIM5tBJ8j+1BoYvbB7sgyXFqwpHoewbhxmN0IeI=,tag:LW27cqFe+LQChOGckEhKBA==,type:str]
-    password: ENC[AES256_GCM,data:8zbkr43pFkgT8H+rp0IcLkOso9vDoFljf7ahtg==,iv:ZYIIhynrOvJ/6ecKPPwa9Oie4nRiva/8O8nT7Lom5nk=,tag:Z88UfHPy3mL3j893odYG9Q==,type:str]
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age: []
-    lastmodified: "2024-09-09T18:19:54Z"
-    mac: ENC[AES256_GCM,data:4BTorO5D44GWl150IdRTFNwvDzwM4V60Po1r7zTaTHrimPQjJDQhXBbg0ugn8nfSrwSB66Sxd8C/udz80au4Nr0sAiHTPuggFXB54QXcZgRP/YQDd+rIMjaneM+SMh5o6sIlJEUiEBtlnBfhd7CTj2T88jXTaD2yAICScj/deeg=,iv:PsJf/plvy++vRrfKwX30ZeZ7M5jVm4MfVc72yvPvY1U=,tag:8pbxttOCXXojIzkNaejmWg==,type:str]
-    pgp:
-        - created_at: "2024-09-09T18:19:54Z"
-          enc: |-
-            -----BEGIN PGP MESSAGE-----
-
-            hQGMA71EESEn7N2iAQv/ZPTkvhA5wZcEcpQpQInUWZys4F7IyaAd2sD5dRbbS21e
-            lDDxB+spywtMoQ9doJ5zBzF6NDeBxASTgeBj0ielnWaRYCDJssj8Up0CcFA623qW
-            1DfniGyxTL/+AOJ028whIXHy2G2fyiUsX3UL4/ZrktSPbQS4IbF9oFw1jvvUlbWq
-            op3Rg1d2OaFN2HeKSEH5PrEUtzFuqPjGOwTedNAVj3MLL6vhRvCiXyiNZBsHpEpy
-            LcEjyYU8MyiDR5kc1CaKB1PcGnteN/eFLLgRQXFg8z6fEtP19soFGYs+OdBvveax
-            lWGe+zVX23kSrPzdJmY+1+0zDYhsLe9nK0Bn3p5WDqT/2E4giljWkNSGRPeNEufK
-            LJ0XD6tN8NF34Uxt3+32RHB+cH183jSagPXdXU3zzpJueoyepe+vNwMRP5dmLL/c
-            niSD7SfC6sDjHtPJSdcxPbGh2B1z09Ym2h2SUIppOt+KH0oyBHKXm9uLvB2EQB87
-            QK10BSRC58UNqhe+rK980l4BrUtK4bey7Fq+uaBDda0HDRoDuOpvGB2vaKzEOzJd
-            fKCzMV5e4G8CARhkhij/Q4mLnevZwcaoqgL4AOGZl8ArBePbwvq8FyXMwQ+vT4Is
-            QAIvpMmoKvPRd5MUgrAx
-            =01m9
-            -----END PGP MESSAGE-----
-          fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
-    encrypted_regex: ^(data|stringData)$
-    version: 3.9.0
+#apiVersion: v1
+#kind: Secret
+#type: Opaque
+#metadata:
+#    name: wazuh-api-secrets
+#    namespace: wazuh-system
+#stringData:
+#    username: ENC[AES256_GCM,data:nU4HoHK3c7n+,iv:UApcAIM5tBJ8j+1BoYvbB7sgyXFqwpHoewbhxmN0IeI=,tag:LW27cqFe+LQChOGckEhKBA==,type:str]
+#    password: ENC[AES256_GCM,data:8zbkr43pFkgT8H+rp0IcLkOso9vDoFljf7ahtg==,iv:ZYIIhynrOvJ/6ecKPPwa9Oie4nRiva/8O8nT7Lom5nk=,tag:Z88UfHPy3mL3j893odYG9Q==,type:str]
+#sops:
+#    kms: []
+#    gcp_kms: []
+#    azure_kv: []
+#    hc_vault: []
+#    age: []
+#    lastmodified: "2024-09-09T18:19:54Z"
+#    mac: ENC[AES256_GCM,data:4BTorO5D44GWl150IdRTFNwvDzwM4V60Po1r7zTaTHrimPQjJDQhXBbg0ugn8nfSrwSB66Sxd8C/udz80au4Nr0sAiHTPuggFXB54QXcZgRP/YQDd+rIMjaneM+SMh5o6sIlJEUiEBtlnBfhd7CTj2T88jXTaD2yAICScj/deeg=,iv:PsJf/plvy++vRrfKwX30ZeZ7M5jVm4MfVc72yvPvY1U=,tag:8pbxttOCXXojIzkNaejmWg==,type:str]
+#    pgp:
+#        - created_at: "2024-09-09T18:19:54Z"
+#          enc: |-
+#            -----BEGIN PGP MESSAGE-----
+#
+#            hQGMA71EESEn7N2iAQv/ZPTkvhA5wZcEcpQpQInUWZys4F7IyaAd2sD5dRbbS21e
+#            lDDxB+spywtMoQ9doJ5zBzF6NDeBxASTgeBj0ielnWaRYCDJssj8Up0CcFA623qW
+#            1DfniGyxTL/+AOJ028whIXHy2G2fyiUsX3UL4/ZrktSPbQS4IbF9oFw1jvvUlbWq
+#            op3Rg1d2OaFN2HeKSEH5PrEUtzFuqPjGOwTedNAVj3MLL6vhRvCiXyiNZBsHpEpy
+#            LcEjyYU8MyiDR5kc1CaKB1PcGnteN/eFLLgRQXFg8z6fEtP19soFGYs+OdBvveax
+#            lWGe+zVX23kSrPzdJmY+1+0zDYhsLe9nK0Bn3p5WDqT/2E4giljWkNSGRPeNEufK
+#            LJ0XD6tN8NF34Uxt3+32RHB+cH183jSagPXdXU3zzpJueoyepe+vNwMRP5dmLL/c
+#            niSD7SfC6sDjHtPJSdcxPbGh2B1z09Ym2h2SUIppOt+KH0oyBHKXm9uLvB2EQB87
+#            QK10BSRC58UNqhe+rK980l4BrUtK4bey7Fq+uaBDda0HDRoDuOpvGB2vaKzEOzJd
+#            fKCzMV5e4G8CARhkhij/Q4mLnevZwcaoqgL4AOGZl8ArBePbwvq8FyXMwQ+vT4Is
+#            QAIvpMmoKvPRd5MUgrAx
+#            =01m9
+#            -----END PGP MESSAGE-----
+#          fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
+#    encrypted_regex: ^(data|stringData)$
+#    version: 3.9.0
