--- a/cluster/apps/wazuh-system/manager/secrets.enc.yaml
+++ b/cluster/apps/wazuh-system/manager/secrets.enc.yaml
@@ -1,38 +1,38 @@
-apiVersion: v1
-kind: Secret
-type: Opaque
-metadata:
-    name: wazuh-manager-secrets
-    namespace: wazuh-system
-stringData:
-    authd.pass: ENC[AES256_GCM,data:eWi/KLR5ZTsGAhrUddZo/r7Yo2Hs45QUYg7605Dm,iv:4Tk24LzuYX17aJBylY+pfduLh4/L5IWX/CrZHsCRzRc=,tag:8Ikx/OQr8zXlCOMqaOYwig==,type:str]
-    cluster_key: ENC[AES256_GCM,data:2GTkcLhKxSW2j4OTTt7he6RMdmEnTkhKurdwYkk3tdM=,iv:7Xq/SCoLHA6fFgcdFDvdmFfxVgmXShc+f8VbGICtB/8=,tag:CkkgZ6aVdDLw7JIJWvvQPw==,type:str]
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age: []
-    lastmodified: "2024-09-10T12:40:28Z"
-    mac: ENC[AES256_GCM,data:SwEyku16iXnsnGUdGbTP0JnIdbQsnD3/roQ+E/0hE2HU71cfnl9IY0ZVY0DUHlwEWp9HOe6oOcBYS0tRPec727XDVPzAi/gJRA1EF4kYeAWylWgW3HZL1RKzkkracoXxiT37EEoUDEhvE14UsJkWsAF8cOAGEJzyt2j4AKqaSds=,iv:q/OPAz4W2ui/VhC9w/Gpziz4rQ87TnL8bSr4l6p4Qec=,tag:Z5DF0U4tgV07OcPSgawvPg==,type:str]
-    pgp:
-        - created_at: "2024-09-10T12:40:28Z"
-          enc: |-
-            -----BEGIN PGP MESSAGE-----
-
-            hQGMA71EESEn7N2iAQv/TVnq9YZGsHVobcX9C0+bK8zLB4jkMWoRGZ1inNf3hfTQ
-            IAqYyzNtg0NoEtTtibbaP0LDdjsKEiwnv/Otbb/44kgbmvlK9KuWAvnlyyg03grq
-            Fcc89w07cG2778lZugmykhNrXiVQ5Xxc67vpQRHL2lbYPISiDkteZhsI1cMkV1Wm
-            +ivBe2PY25uXH16yKHbsLF/bphf+htbFJPczZHI1p7zYSk5nDiuKstNYIUN2l8oz
-            BbiGwUMZcqGfBUK883lD257fV33WwKDZJOhd+ySXsdbfybglEyPCE71SnhIqnnx9
-            emxzwpTVj1Q+askyhmEh67ALLDP4ZEyAl0S/NOpBAmFaudsIuo/VeJhZNP6aU51h
-            SyXIiaYv52xXBM6cZrxE0VR7HC8lyV82HwY1s+VKDiGVKGqdlbp3P/q+8i05N7Eo
-            wuymZcyNNw4FMfqUf4SYk7oZGtYTVpn1KlKX2x09xgAzP8fdlJfFlW5N5ocFjQy/
-            Qhjee24MVZS0eJAzdiRE0l4BuXDGVKEAPH3IGbMrQE6ceeO9gfqM2xkRT2wJj2u4
-            zne9qbK2md9Zr83Fs++DVxImT4/EOOO+uP2PjqEvJO555xrNRCuhvR3zW7t02QfU
-            MFNlhIJlao6gvYoEDOZx
-            =HlJE
-            -----END PGP MESSAGE-----
-          fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
-    encrypted_regex: ^(data|stringData)$
-    version: 3.9.0
+#apiVersion: v1
+#kind: Secret
+#type: Opaque
+#metadata:
+#    name: wazuh-manager-secrets
+#    namespace: wazuh-system
+#stringData:
+#    authd.pass: ENC[AES256_GCM,data:eWi/KLR5ZTsGAhrUddZo/r7Yo2Hs45QUYg7605Dm,iv:4Tk24LzuYX17aJBylY+pfduLh4/L5IWX/CrZHsCRzRc=,tag:8Ikx/OQr8zXlCOMqaOYwig==,type:str]
+#    cluster_key: ENC[AES256_GCM,data:2GTkcLhKxSW2j4OTTt7he6RMdmEnTkhKurdwYkk3tdM=,iv:7Xq/SCoLHA6fFgcdFDvdmFfxVgmXShc+f8VbGICtB/8=,tag:CkkgZ6aVdDLw7JIJWvvQPw==,type:str]
+#sops:
+#    kms: []
+#    gcp_kms: []
+#    azure_kv: []
+#    hc_vault: []
+#    age: []
+#    lastmodified: "2024-09-10T12:40:28Z"
+#    mac: ENC[AES256_GCM,data:SwEyku16iXnsnGUdGbTP0JnIdbQsnD3/roQ+E/0hE2HU71cfnl9IY0ZVY0DUHlwEWp9HOe6oOcBYS0tRPec727XDVPzAi/gJRA1EF4kYeAWylWgW3HZL1RKzkkracoXxiT37EEoUDEhvE14UsJkWsAF8cOAGEJzyt2j4AKqaSds=,iv:q/OPAz4W2ui/VhC9w/Gpziz4rQ87TnL8bSr4l6p4Qec=,tag:Z5DF0U4tgV07OcPSgawvPg==,type:str]
+#    pgp:
+#        - created_at: "2024-09-10T12:40:28Z"
+#          enc: |-
+#            -----BEGIN PGP MESSAGE-----
+#
+#            hQGMA71EESEn7N2iAQv/TVnq9YZGsHVobcX9C0+bK8zLB4jkMWoRGZ1inNf3hfTQ
+#            IAqYyzNtg0NoEtTtibbaP0LDdjsKEiwnv/Otbb/44kgbmvlK9KuWAvnlyyg03grq
+#            Fcc89w07cG2778lZugmykhNrXiVQ5Xxc67vpQRHL2lbYPISiDkteZhsI1cMkV1Wm
+#            +ivBe2PY25uXH16yKHbsLF/bphf+htbFJPczZHI1p7zYSk5nDiuKstNYIUN2l8oz
+#            BbiGwUMZcqGfBUK883lD257fV33WwKDZJOhd+ySXsdbfybglEyPCE71SnhIqnnx9
+#            emxzwpTVj1Q+askyhmEh67ALLDP4ZEyAl0S/NOpBAmFaudsIuo/VeJhZNP6aU51h
+#            SyXIiaYv52xXBM6cZrxE0VR7HC8lyV82HwY1s+VKDiGVKGqdlbp3P/q+8i05N7Eo
+#            wuymZcyNNw4FMfqUf4SYk7oZGtYTVpn1KlKX2x09xgAzP8fdlJfFlW5N5ocFjQy/
+#            Qhjee24MVZS0eJAzdiRE0l4BuXDGVKEAPH3IGbMrQE6ceeO9gfqM2xkRT2wJj2u4
+#            zne9qbK2md9Zr83Fs++DVxImT4/EOOO+uP2PjqEvJO555xrNRCuhvR3zW7t02QfU
+#            MFNlhIJlao6gvYoEDOZx
+#            =HlJE
+#            -----END PGP MESSAGE-----
+#          fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
+#    encrypted_regex: ^(data|stringData)$
+#    version: 3.9.0
