--- a/cluster/apps/wazuh-system/wazuh-dashboard/indexer-secret.enc.yaml
+++ b/cluster/apps/wazuh-system/wazuh-dashboard/indexer-secret.enc.yaml
@@ -1,38 +1,38 @@
-apiVersion: v1
-kind: Secret
-type: Opaque
-metadata:
-    name: wazuh-indexer-secrets
-    namespace: wazuh-system
-stringData:
-    username: ENC[AES256_GCM,data:pKvk+jI=,iv:Z5cpOK68Y0jHOF9U71lHbt9AW4aAdSp2Rc7hAXtIBmw=,tag:ZWzu4Lu+C8ZM6nTcNXs3Yw==,type:str]
-    password: ENC[AES256_GCM,data:gxKBOQND/qnlVkBDs14=,iv:PrmAqjfeo7J13/GxeDaEfTY9nInCfx26cloVSNJ5zgQ=,tag:49+ILeHIpaS1TATtsinTAw==,type:str]
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age: []
-    lastmodified: "2024-09-09T17:53:18Z"
-    mac: ENC[AES256_GCM,data:mnxpYRwS086K50jpmJgsq/JW3ibAbPPWoPuVUgSQTbG5VHZxXinIwkmmkk3GKCfuA6ARzaKsqHGFioqlrLjEnH49l68knuJ/z+ximHSENwZSRiKxbUQGbiNfBgestaNEvLJV8TZBjqKH2hcC3IyAxaFCxrhgAHEeMSX1FvvemDc=,iv:rOuFKuWd7JxXGUvJJkF2qp14dn6yt4yeRbP5TQIkDcM=,tag:i/77HD8YvvrCpOW8b1+/gw==,type:str]
-    pgp:
-        - created_at: "2024-09-09T17:53:18Z"
-          enc: |-
-            -----BEGIN PGP MESSAGE-----
-
-            hQGMA71EESEn7N2iAQv/fpTspvr+4lCzNP6nxGzSg7Pf9kb7yF6TJoGDLEUXjksC
-            81BCo8vguXuIscOLqjv/C7y3xJjcHwJ3RS6mrPMcVaP633lri4JlEHexbCyLoDj7
-            jd73EUuPsdA+CqdUvN21cUl7ltQL8O35g6Ob9y29EHs0dI0VvEmRm7Nr98+bhVHK
-            b39EOIH/edIVEAtYQW1ahPyi3kWe8rs7FDdb+yCyn69iZ6OW46WWSf+JHuugnHdr
-            rK1FYIoAadPkBX1rojzVJkWDNGy7PTCes91buidSxbc44yYQrlgOM7laVoyqeHqf
-            TZWoHRZnuyQ4Gzp01KY3p2Nuh7T03a0dM0SXBgkkhkqdBaMcAnO8lhqFyBImCLl8
-            Ffct0tI3g6kwtyPXybAuo/42OSb63VylKdhvC1GbMxKg2SCgNPPORz1koi3axjkW
-            D9DW7F6sG9prJuyuH9bzGDbXXaZsWryp34QmqcCuXZfA0c+aWzDJEfJnJCSAhaP3
-            PG6KBzvkZVYaqWIaq7DM0lwBz2zNGhTy6IdKOlK5xaqmryyPTveJg4lyoiE/7Vhi
-            FEWPuoT70K6ggvr+NTNfLCIgGrUx46eaU25JOmVFvbLUCF1SZfO6/wzc+jLSEFH+
-            L+XAtHu8ahp6JbLXEQ==
-            =F+iw
-            -----END PGP MESSAGE-----
-          fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
-    encrypted_regex: ^(data|stringData)$
-    version: 3.9.0
+#apiVersion: v1
+#kind: Secret
+#type: Opaque
+#metadata:
+#    name: wazuh-indexer-secrets
+#    namespace: wazuh-system
+#stringData:
+#    username: ENC[AES256_GCM,data:pKvk+jI=,iv:Z5cpOK68Y0jHOF9U71lHbt9AW4aAdSp2Rc7hAXtIBmw=,tag:ZWzu4Lu+C8ZM6nTcNXs3Yw==,type:str]
+#    password: ENC[AES256_GCM,data:gxKBOQND/qnlVkBDs14=,iv:PrmAqjfeo7J13/GxeDaEfTY9nInCfx26cloVSNJ5zgQ=,tag:49+ILeHIpaS1TATtsinTAw==,type:str]
+#sops:
+#    kms: []
+#    gcp_kms: []
+#    azure_kv: []
+#    hc_vault: []
+#    age: []
+#    lastmodified: "2024-09-09T17:53:18Z"
+#    mac: ENC[AES256_GCM,data:mnxpYRwS086K50jpmJgsq/JW3ibAbPPWoPuVUgSQTbG5VHZxXinIwkmmkk3GKCfuA6ARzaKsqHGFioqlrLjEnH49l68knuJ/z+ximHSENwZSRiKxbUQGbiNfBgestaNEvLJV8TZBjqKH2hcC3IyAxaFCxrhgAHEeMSX1FvvemDc=,iv:rOuFKuWd7JxXGUvJJkF2qp14dn6yt4yeRbP5TQIkDcM=,tag:i/77HD8YvvrCpOW8b1+/gw==,type:str]
+#    pgp:
+#        - created_at: "2024-09-09T17:53:18Z"
+#          enc: |-
+#            -----BEGIN PGP MESSAGE-----
+#
+#            hQGMA71EESEn7N2iAQv/fpTspvr+4lCzNP6nxGzSg7Pf9kb7yF6TJoGDLEUXjksC
+#            81BCo8vguXuIscOLqjv/C7y3xJjcHwJ3RS6mrPMcVaP633lri4JlEHexbCyLoDj7
+#            jd73EUuPsdA+CqdUvN21cUl7ltQL8O35g6Ob9y29EHs0dI0VvEmRm7Nr98+bhVHK
+#            b39EOIH/edIVEAtYQW1ahPyi3kWe8rs7FDdb+yCyn69iZ6OW46WWSf+JHuugnHdr
+#            rK1FYIoAadPkBX1rojzVJkWDNGy7PTCes91buidSxbc44yYQrlgOM7laVoyqeHqf
+#            TZWoHRZnuyQ4Gzp01KY3p2Nuh7T03a0dM0SXBgkkhkqdBaMcAnO8lhqFyBImCLl8
+#            Ffct0tI3g6kwtyPXybAuo/42OSb63VylKdhvC1GbMxKg2SCgNPPORz1koi3axjkW
+#            D9DW7F6sG9prJuyuH9bzGDbXXaZsWryp34QmqcCuXZfA0c+aWzDJEfJnJCSAhaP3
+#            PG6KBzvkZVYaqWIaq7DM0lwBz2zNGhTy6IdKOlK5xaqmryyPTveJg4lyoiE/7Vhi
+#            FEWPuoT70K6ggvr+NTNfLCIgGrUx46eaU25JOmVFvbLUCF1SZfO6/wzc+jLSEFH+
+#            L+XAtHu8ahp6JbLXEQ==
+#            =F+iw
+#            -----END PGP MESSAGE-----
+#          fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
+#    encrypted_regex: ^(data|stringData)$
+#    version: 3.9.0
