--- a/cluster/apps/wazuh-system/certificates/node-certificate.yaml
+++ b/cluster/apps/wazuh-system/certificates/node-certificate.yaml
@@ -1,29 +1,29 @@
-# Source: api/templates/virtual_service.yaml
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: wazuh-node-certificate
-  namespace: wazuh-system
-spec:
-  issuerRef:
-    group: cert-manager.io
-    kind: Issuer
-    name: wazuh-issuer
-  secretName: wazuh-node-tls
-  commonName: "wazuh-indexer-0.wazuh-indexer-discovery-svc"
-  dnsNames:
-    - "wazuh-indexer-0.wazuh-indexer-discovery-svc"
-  usages:
-    - "signing"
-    - "key encipherment"
-    - "server auth"
-    - "client auth"
-    - digital signature
-  duration: 2160h
-  renewBefore: 360h
-  isCA: false
-  privateKey:
-    algorithm: RSA
-    encoding: PKCS1
-    size: 2048
-    rotationPolicy: Always
+## Source: api/templates/virtual_service.yaml
+#apiVersion: cert-manager.io/v1
+#kind: Certificate
+#metadata:
+#  name: wazuh-node-certificate
+#  namespace: wazuh-system
+#spec:
+#  issuerRef:
+#    group: cert-manager.io
+#    kind: Issuer
+#    name: wazuh-issuer
+#  secretName: wazuh-node-tls
+#  commonName: "wazuh-indexer-0.wazuh-indexer-discovery-svc"
+#  dnsNames:
+#    - "wazuh-indexer-0.wazuh-indexer-discovery-svc"
+#  usages:
+#    - "signing"
+#    - "key encipherment"
+#    - "server auth"
+#    - "client auth"
+#    - digital signature
+#  duration: 2160h
+#  renewBefore: 360h
+#  isCA: false
+#  privateKey:
+#    algorithm: RSA
+#    encoding: PKCS1
+#    size: 2048
+#    rotationPolicy: Always
