--- a/cluster/apps/wazuh-system/indexer/discovery-svc.yaml
+++ b/cluster/apps/wazuh-system/indexer/discovery-svc.yaml
@@ -1,24 +1,24 @@
-# Copyright (C) 2019, Wazuh Inc.
+## Copyright (C) 2019, Wazuh Inc.
+##
+## This program is a free software; you can redistribute it
+## and/or modify it under the terms of the GNU General Public
+## License (version 2) as published by the FSF - Free Software
+## Foundation.
 #
-# This program is a free software; you can redistribute it
-# and/or modify it under the terms of the GNU General Public
-# License (version 2) as published by the FSF - Free Software
-# Foundation.
-
-# Indexer service: Communications
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: wazuh-indexer-discovery-svc
-  namespace: wazuh-system
-  labels:
-    app: wazuh-indexer
-spec:
-  selector:
-    app: wazuh-indexer
-  ports:
-    - name: indexer-nodes
-      port: 9300
-      targetPort: 9300
-  clusterIP: None
+## Indexer service: Communications
+#
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: wazuh-indexer-discovery-svc
+#  namespace: wazuh-system
+#  labels:
+#    app: wazuh-indexer
+#spec:
+#  selector:
+#    app: wazuh-indexer
+#  ports:
+#    - name: indexer-nodes
+#      port: 9300
+#      targetPort: 9300
+#  clusterIP: None
