--- a/cluster/apps/wazuh-system/manager/worker/svc.yaml
+++ b/cluster/apps/wazuh-system/manager/worker/svc.yaml
@@ -1,26 +1,26 @@
-# Copyright (C) 2019, Wazuh Inc.
+## Copyright (C) 2019, Wazuh Inc.
+##
+## This program is a free software; you can redistribute it
+## and/or modify it under the terms of the GNU General Public
+## License (version 2) as published by the FSF - Free Software
+## Foundation.
 #
-# This program is a free software; you can redistribute it
-# and/or modify it under the terms of the GNU General Public
-# License (version 2) as published by the FSF - Free Software
-# Foundation.
-
-# Wazuh workers service: Agent reporting
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: wazuh-workers
-  namespace: wazuh-system
-  labels:
-    app: wazuh-manager
-    # dns: route53
-spec:
-  type: ClusterIP
-  selector:
-    app: wazuh-manager
-    node-type: worker
-  ports:
-    - name: agents-events
-      port: 1514
-      targetPort: 1514
+## Wazuh workers service: Agent reporting
+#
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: wazuh-workers
+#  namespace: wazuh-system
+#  labels:
+#    app: wazuh-manager
+#    # dns: route53
+#spec:
+#  type: ClusterIP
+#  selector:
+#    app: wazuh-manager
+#    node-type: worker
+#  ports:
+#    - name: agents-events
+#      port: 1514
+#      targetPort: 1514
