--- a/cluster/apps/wazuh-system/namespace.yaml
+++ b/cluster/apps/wazuh-system/namespace.yaml
@@ -1,5 +1,5 @@
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: wazuh-system
+#---
+#apiVersion: v1
+#kind: Namespace
+#metadata:
+#  name: wazuh-system
