--- a/cluster/apps/wazuh-system/wazuh-dashboard/certificate.yaml
+++ b/cluster/apps/wazuh-system/wazuh-dashboard/certificate.yaml
@@ -1,43 +1,43 @@
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: wazuh-dashboard-tls-certificate
-  namespace: wazuh-system
-spec:
-  secretName: wazuh-dashboard-tls
-  issuerRef:
-    name: letsencrypt-production
-    kind: ClusterIssuer
-  commonName: "wazuh-dashboard.${SECRET_DOMAIN}"
-  dnsNames:
-    - "wazuh-dashboard.${SECRET_DOMAIN}"
----
-# Source: api/templates/virtual_service.yaml
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: dashboard
-  namespace: wazuh-system
-spec:
-  issuerRef:
-    group: cert-manager.io
-    kind: Issuer
-    name: wazuh-issuer
-  secretName: dashboard-tls
-  commonName: dashboard
-  dnsNames:
-    - "dashboard"
-  usages:
-    - "signing"
-    - "key encipherment"
-    - "server auth"
-    - "client auth"
-    - digital signature
-  duration: 2160h
-  renewBefore: 360h
-  isCA: false
-  privateKey:
-    algorithm: RSA
-    encoding: PKCS1
-    size: 2048
-    rotationPolicy: Always
+#apiVersion: cert-manager.io/v1
+#kind: Certificate
+#metadata:
+#  name: wazuh-dashboard-tls-certificate
+#  namespace: wazuh-system
+#spec:
+#  secretName: wazuh-dashboard-tls
+#  issuerRef:
+#    name: letsencrypt-production
+#    kind: ClusterIssuer
+#  commonName: "wazuh-dashboard.${SECRET_DOMAIN}"
+#  dnsNames:
+#    - "wazuh-dashboard.${SECRET_DOMAIN}"
+#---
+## Source: api/templates/virtual_service.yaml
+#apiVersion: cert-manager.io/v1
+#kind: Certificate
+#metadata:
+#  name: dashboard
+#  namespace: wazuh-system
+#spec:
+#  issuerRef:
+#    group: cert-manager.io
+#    kind: Issuer
+#    name: wazuh-issuer
+#  secretName: dashboard-tls
+#  commonName: dashboard
+#  dnsNames:
+#    - "dashboard"
+#  usages:
+#    - "signing"
+#    - "key encipherment"
+#    - "server auth"
+#    - "client auth"
+#    - digital signature
+#  duration: 2160h
+#  renewBefore: 360h
+#  isCA: false
+#  privateKey:
+#    algorithm: RSA
+#    encoding: PKCS1
+#    size: 2048
+#    rotationPolicy: Always
