--- a/cluster/apps/wazuh-system/wazuh-dashboard/ingress.yaml
+++ b/cluster/apps/wazuh-system/wazuh-dashboard/ingress.yaml
@@ -1,26 +1,26 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: wazuh-dashboard-ingress
-  namespace: wazuh-system
-  annotations:
-#    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
-#    nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
-    external-dns/is-public: "false"
-    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
-spec:
-  ingressClassName: "internal"
-  rules:
-    - host: "wazuh-dashboard.${SECRET_DOMAIN}"
-      http:
-        paths:
-          - pathType: Prefix
-            path: /
-            backend:
-              service:
-                name: wazuh-dashboard-svc
-                port:
-                  number: 80
-  tls:
-    - hosts:
-        - "wazuh-dashboard.${SECRET_DOMAIN}"
+#apiVersion: networking.k8s.io/v1
+#kind: Ingress
+#metadata:
+#  name: wazuh-dashboard-ingress
+#  namespace: wazuh-system
+#  annotations:
+##    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.networking.svc.cluster.local/oauth2/auth"
+##    nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/sign_in"
+#    external-dns/is-public: "false"
+#    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+#spec:
+#  ingressClassName: "internal"
+#  rules:
+#    - host: "wazuh-dashboard.${SECRET_DOMAIN}"
+#      http:
+#        paths:
+#          - pathType: Prefix
+#            path: /
+#            backend:
+#              service:
+#                name: wazuh-dashboard-svc
+#                port:
+#                  number: 80
+#  tls:
+#    - hosts:
+#        - "wazuh-dashboard.${SECRET_DOMAIN}"
