--- a/cluster/apps/wazuh-system/wazuh-dashboard/secret.enc.yaml
+++ b/cluster/apps/wazuh-system/wazuh-dashboard/secret.enc.yaml
@@ -1,38 +1,38 @@
-apiVersion: v1
-kind: Secret
-type: Opaque
-metadata:
-    name: wazuh-dashboard-secrets
-    namespace: wazuh-system
-stringData:
-    username: ENC[AES256_GCM,data:usRM16SfOqGifc6r,iv:SyJu272uo/HckfgCZ0zQX/nN0f+D2U7IJLyb0iHZa14=,tag:w0mWHMKb/9SSk4XT8p9FNw==,type:str]
-    password: ENC[AES256_GCM,data:hyYDidUnsjwmtb4Y,iv:KfjLH9PyrYUykI2BJqMZEsMuQHxiU13J2hwCCIjQE3M=,tag:YUFeiwP2P16YqwUSSIg0WQ==,type:str]
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age: []
-    lastmodified: "2024-09-09T17:57:02Z"
-    mac: ENC[AES256_GCM,data:eb94X4VlZJhwjVpavKKdgk54EDjs6vqNUaFR7YqA4eYYq51Mypu/5Zu6Dzg8+VZ5WpJ28uIokD6rFxPAnzVNo0p+Ix4C9MQOonPyIKa9wXk0Jjrsp/bonoGJsP2nWagBuJXvBOO5xWFKEDnplWsp/pKsFSRwcXkgcD5cLnETk8c=,iv:SjrdCu5h4jWaMf8y1Adi0J0iB/ZQHN6te94lQXC1FJY=,tag:D8vB8+dRrPasxQJ7EM7rHw==,type:str]
-    pgp:
-        - created_at: "2024-09-09T17:57:02Z"
-          enc: |-
-            -----BEGIN PGP MESSAGE-----
-
-            hQGMA71EESEn7N2iAQwAiqcLq/gaVeAoBzLRLmdO/ZSVmkYLHgBinIfwgqAZx2Jh
-            49VJZG/cv5yDqNF5xEamC86WGlHNB4Tq7qDCPCrXs8JyKhzf9mEp6YHybyFS5IwP
-            qidbK95lBT+LuOT6CntiTc6KqNnU6X7qvOKGoDklwZ27kc2J8CEpU4VfZIa8Kv6K
-            NrFM5z92F/ggnkxQwniQAlQTmk7wAxX1TKF/T6p/4Ws467vmkTB8ZCtXhCoDLcLG
-            qQKdiI5mzofWWVfCz6hl0tk9qWWrEAqEwdH+nxUfvjTsx+qJUZ8AgojLAZfWSmNk
-            U2KbonSEPCCJtT3F+z2pFRZV6SVb/zDnBSPm9Qa9B4RV+MgI6BHoV0coPlIKMO6/
-            DBQuyru5jAarWysfDCr55iolaEOPpnvsjAQBYs5l+sGnapdGVr4Kfkn5t6Ae6hQW
-            RPFiKWy9hcRAh2Ly54BDzs6sWIflK4Iy5FFmCpfhLQ028V/zlS2+FqZdd/Q18hrD
-            cZ8eZfXpkTTVmVazjjWZ0l4Bn+1hUyFd/FSKufU/qP+uJzOP/2ZeEoIMxM2B8Z6y
-            KzhRV0yKGscvl9m1IYbGWQS+HYN4DifnrBSAJHuGNlTrz1frvFltTBRtHXkgIFxb
-            7+sPi6nrJtUk5zWUTeB+
-            =bpfB
-            -----END PGP MESSAGE-----
-          fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
-    encrypted_regex: ^(data|stringData)$
-    version: 3.9.0
+#apiVersion: v1
+#kind: Secret
+#type: Opaque
+#metadata:
+#    name: wazuh-dashboard-secrets
+#    namespace: wazuh-system
+#stringData:
+#    username: ENC[AES256_GCM,data:usRM16SfOqGifc6r,iv:SyJu272uo/HckfgCZ0zQX/nN0f+D2U7IJLyb0iHZa14=,tag:w0mWHMKb/9SSk4XT8p9FNw==,type:str]
+#    password: ENC[AES256_GCM,data:hyYDidUnsjwmtb4Y,iv:KfjLH9PyrYUykI2BJqMZEsMuQHxiU13J2hwCCIjQE3M=,tag:YUFeiwP2P16YqwUSSIg0WQ==,type:str]
+#sops:
+#    kms: []
+#    gcp_kms: []
+#    azure_kv: []
+#    hc_vault: []
+#    age: []
+#    lastmodified: "2024-09-09T17:57:02Z"
+#    mac: ENC[AES256_GCM,data:eb94X4VlZJhwjVpavKKdgk54EDjs6vqNUaFR7YqA4eYYq51Mypu/5Zu6Dzg8+VZ5WpJ28uIokD6rFxPAnzVNo0p+Ix4C9MQOonPyIKa9wXk0Jjrsp/bonoGJsP2nWagBuJXvBOO5xWFKEDnplWsp/pKsFSRwcXkgcD5cLnETk8c=,iv:SjrdCu5h4jWaMf8y1Adi0J0iB/ZQHN6te94lQXC1FJY=,tag:D8vB8+dRrPasxQJ7EM7rHw==,type:str]
+#    pgp:
+#        - created_at: "2024-09-09T17:57:02Z"
+#          enc: |-
+#            -----BEGIN PGP MESSAGE-----
+#
+#            hQGMA71EESEn7N2iAQwAiqcLq/gaVeAoBzLRLmdO/ZSVmkYLHgBinIfwgqAZx2Jh
+#            49VJZG/cv5yDqNF5xEamC86WGlHNB4Tq7qDCPCrXs8JyKhzf9mEp6YHybyFS5IwP
+#            qidbK95lBT+LuOT6CntiTc6KqNnU6X7qvOKGoDklwZ27kc2J8CEpU4VfZIa8Kv6K
+#            NrFM5z92F/ggnkxQwniQAlQTmk7wAxX1TKF/T6p/4Ws467vmkTB8ZCtXhCoDLcLG
+#            qQKdiI5mzofWWVfCz6hl0tk9qWWrEAqEwdH+nxUfvjTsx+qJUZ8AgojLAZfWSmNk
+#            U2KbonSEPCCJtT3F+z2pFRZV6SVb/zDnBSPm9Qa9B4RV+MgI6BHoV0coPlIKMO6/
+#            DBQuyru5jAarWysfDCr55iolaEOPpnvsjAQBYs5l+sGnapdGVr4Kfkn5t6Ae6hQW
+#            RPFiKWy9hcRAh2Ly54BDzs6sWIflK4Iy5FFmCpfhLQ028V/zlS2+FqZdd/Q18hrD
+#            cZ8eZfXpkTTVmVazjjWZ0l4Bn+1hUyFd/FSKufU/qP+uJzOP/2ZeEoIMxM2B8Z6y
+#            KzhRV0yKGscvl9m1IYbGWQS+HYN4DifnrBSAJHuGNlTrz1frvFltTBRtHXkgIFxb
+#            7+sPi6nrJtUk5zWUTeB+
+#            =bpfB
+#            -----END PGP MESSAGE-----
+#          fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
+#    encrypted_regex: ^(data|stringData)$
+#    version: 3.9.0
